--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pyyaml = "^6.0.2"
 tokenizers = "^0.19.1"
 sentencepiece = "^0.1.99"
 accelerate = "^0.33.0"
+litserve = "^0.1.5"
+uvloop = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 
